@@ -11,6 +11,6 @@ int foo(char *b)
 /* Folding should have determined that the two addresses were
    not identical and thus collapsed the function into a trivial
    "return 0".  */
-/* { dg-final { scan-tree-dump-times "return 0" 1 "original"} } */
+/* { dg-final { scan-tree-dump-times "return 0" 1 "original" { xfail *-*-* } } */
 /* { dg-final { cleanup-tree-dump "original" } } */
 
